--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,20 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Mein Kochbuch
-email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "CookBook" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-# twitter_username: jekyllrb
-github_username:  kC0pter
+# title: Mein Kochbuch
+# email: your-email@example.com
+# description: >- # this means to ignore newlines until "baseurl:"
+#   Write an awesome description for your new site here. You can edit this
+#   line in _config.yml. It will appear in your document head meta (for
+#   Google search results) and in your feed.xml site description.
+# baseurl: "CookBook" # the subpath of your site, e.g. /blog
+# url: "" # the base hostname & protocol for your site, e.g. http://example.com
+# # twitter_username: jekyllrb
+# github_username:  kC0pter
+
+# Dependencies
+markdown: kramdown
+highlighter: rouge
 
 # Build settings
 remote_theme: connor-baer/summer
@@ -36,6 +40,77 @@ plugins:
   - jekyll-gist
   - jekyll-redirect-from
   - jekyll-seo-tag
+
+# Settings
+color: '#fab005'
+exclude:
+  [
+    CNAME,
+    README.md,
+    NOTES.md,
+    LICENSE.md,
+    .gitignore,
+    package.json,
+    _js,
+    _scss,
+    _images,
+    gulpfile.js,
+    gulpconfig.js,
+    node_modules,
+    gemfile,
+    Gemfile.lock,
+  ]
+permalink: /:title/
+compress_html:
+  clippings: all
+  comments: all
+dark_theme: false
+
+# Site meta
+title: Mein Kochbuch
+tagline: 'Delicious & healthy recipes'
+description: "Eine kleine Sammlung an Rezepten"
+keywords: 'connor, bär, designer, traveller, code, jekyll, developer, theme'
+# url: https://connor-baer.github.io
+baseurl: CookBook
+assets: /assets
+images: /images/
+# image: index-large.jpg
+# logo: /assets/icons/apple-icon-144x144.png
+author:
+  name: Thats me
+  bio: Hi, I'm the author of this blog. Nice to meet you!
+  # image: author
+  # url: https://connorbaer.co
+  # email: hello@connorbaer.co
+  # twitter: connor_baer
+
+# Content
+excerpt_separator: <!-- Read more -->
+
+navigation:
+  GitHub: https://github.com/kC0pter/CookBook
+  # Download: https://github.com/connor-baer/summer/archive/gh-pages.zip
+
+collections:
+  recipes:
+    output: true
+
+defaults:
+  - scope:
+      path: ''
+      type: posts
+    values:
+      layout: post
+      lang: en
+      permalink: /news/:title/
+  - scope:
+      path: ''
+      type: recipes
+    values:
+      layout: recipe
+      lang: en
+      permalink: /:title/
 
 # Exclude from processing.
 # The following items will not be processed, by default.
