--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ title: Mein Kochbuch
 tagline: 'Delicious & healthy recipes'
 description: "Eine kleine Sammlung an Rezepten"
 keywords: 'connor, bär, designer, traveller, code, jekyll, developer, theme'
-# url: https://connor-baer.github.io
+url: kC0pter.github.io
 baseurl: CookBook
 assets: /assets
 images: /images/
