updated link and tags and added spundekäs

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ author:
   name: Thats me
   bio: Hi, I'm the author of this blog. Nice to meet you!
   # image: author
-  # url: https://connorbaer.co
+  url: https://github.com/kC0pter/CookBook
   # email: hello@connorbaer.co
   # twitter: connor_baer
 
