--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ keywords: 'connor, bär, designer, traveller, code, jekyll, developer, theme'
 url: kC0pter.github.io
 baseurl: CookBook
 assets: /assets
-images: /images/
+images: /images
 # image: index-large.jpg
 # logo: /assets/icons/apple-icon-144x144.png
 author:
